--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,12 +8,29 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-<de.hdodenhof.circleimageview.CircleImageView
+<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:id="@+id/newAlertButton"
         android:layout_marginTop="100dp"
-        
+        android:textSize="30sp"
+        android:text="New Alert"
+        android:paddingVertical="20dp"
+        android:paddingHorizontal="30dp"
+        android:background="@drawable/main_buttons_layout"
 />
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/pastAlertButton"
+                android:layout_marginTop="100dp"
+                android:textSize="30sp"
+                android:text="Past Alerts"
+                android:layout_below="@+id/newAlertButton"
+                android:padding="20dp"
+                android:background="@drawable/main_buttons_layout"
+        />
     </RelativeLayout>
 </FrameLayout>
