--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -58,7 +58,30 @@
             android:padding="15dp"
             android:layout_marginTop="50dp"
             android:textSize="20sp"
-            android:background="@drawable/button_backgound"
-            android:text="Sign Up"
+            android:background="@drawable/button_background"
+            android:text="Sign In"
     />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneSignInButton"
+            android:padding="15dp"
+            android:gravity="center_horizontal"
+           android:layout_alignParentLeft="true"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:background="@drawable/button_background"
+            android:text="Sign In using phone number"
+            android:layout_toLeftOf="@+id/googleSignInButton"
+            android:layout_below="@+id/loginButton"
+    />
+    <com.google.android.gms.common.SignInButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/googleSignInButton"
+            android:layout_below="@+id/loginButton"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="20dp"
+    />
+
 </RelativeLayout>
