--- a/app/src/main/res/layout/activity_new_alert.xml
+++ b/app/src/main/res/layout/activity_new_alert.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".NewAlertActivity">
 <TextView
         android:layout_width="match_parent"
@@ -14,5 +14,22 @@
         android:background="@drawable/heading_layout"
         android:gravity="center_horizontal"
 />
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="150dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Details"
+            app:hintAnimationEnabled="true"
+            android:gravity="center_horizontal"
+    >
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </RelativeLayout>
