--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#ff5493</color>
     <color name="colorWhite">#ffff</color>
+    <color name="background">#dddddd</color>
 </resources>
