--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,10 +11,9 @@
             android:layout_width="395dp"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
+            android:id="@+id/phoneNumberText"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Enter 10 Digit Phone Number"
     >
@@ -24,6 +23,26 @@
                 android:layout_height="wrap_content"
                 android:maxLength="10"
         />
-
     </com.google.android.material.textfield.TextInputLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/otpLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/AVLoadingIndicatorView"
+            android:visibility="invisible"
+            android:layout_centerHorizontal="true"
+            app:indicatorName="LineScaleIndicator"
+            android:layout_below="@+id/phoneNumberText"
+            app:indicatorColor="your color"
+    />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:layout_below="@+id/otpLoading"
+            android:layout_marginTop="100dp"
+            android:layout_centerHorizontal="true"
+            android:text="Login"
+            android:textSize="20sp"
+    />
+</RelativeLayout>
