--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -24,17 +24,17 @@
                 android:maxLength="10"
         />
     </com.google.android.material.textfield.TextInputLayout>
-    <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/otpLoading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/AVLoadingIndicatorView"
-            android:visibility="invisible"
-            android:layout_centerHorizontal="true"
-            app:indicatorName="LineScaleIndicator"
-            android:layout_below="@+id/phoneNumberText"
-            app:indicatorColor="your color"
-    />
+    <!--<com.wang.avi.AVLoadingIndicatorView-->
+            <!--android:id="@+id/otpLoading"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--style="@style/AVLoadingIndicatorView"-->
+            <!--android:visibility="invisible"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--app:indicatorName="LineScaleIndicator"-->
+            <!--android:layout_below="@+id/phoneNumberText"-->
+            <!--app:indicatorColor="your color"-->
+    <!--/>-->
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,6 +43,7 @@
             android:layout_marginTop="100dp"
             android:layout_centerHorizontal="true"
             android:text="Login"
+            android:id="@+id/phoneNumberLoginButton"
             android:textSize="20sp"
     />
 </RelativeLayout>
