--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -24,22 +24,22 @@
                 android:maxLength="10"
         />
     </com.google.android.material.textfield.TextInputLayout>
-    <!--<com.wang.avi.AVLoadingIndicatorView-->
-            <!--android:id="@+id/otpLoading"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--style="@style/AVLoadingIndicatorView"-->
-            <!--android:visibility="invisible"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--app:indicatorName="LineScaleIndicator"-->
-            <!--android:layout_below="@+id/phoneNumberText"-->
-            <!--app:indicatorColor="your color"-->
-    <!--/>-->
+    <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/otpLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/AVLoadingIndicatorView"
+            android:visibility="invisible"
+            android:layout_centerHorizontal="true"
+            app:indicatorName="LineScaleIndicator"
+            app:indicatorColor="#4d87b3"
+            android:layout_below="@+id/phoneNumberText"
+    />
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background"
-            android:layout_below="@+id/otpLoading"
+            android:layout_centerVertical="true"
             android:layout_marginTop="100dp"
             android:layout_centerHorizontal="true"
             android:text="Login"
