--- a/app/src/main/res/layout/alerts_layout.xml
+++ b/app/src/main/res/layout/alerts_layout.xml
@@ -3,4 +3,21 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="Date Here"
+            android:layout_margin="10dp"
+            android:id="@+id/dateDisplay"
+            />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dateDisplay"
+            android:id="@+id/timeDisplay"
+            android:textSize="22sp"
+            android:text="Time"
+            android:layout_margin="10dp"
+            />
 </RelativeLayout>
